# spendLens

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  W1-DEPLOYMENT-SETUP.md  package.json  pnpm-lock.yaml
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/app/: db.py  main.py  redis_client.py  settings.py
apps/api/app/auth/: deps.py  jwt.py  password.py  routes.py  schemas.py  seed.py
apps/api/app/categorization/: budget.py  cache.py  essential.py  llm.py  rulebook.py  service.py
apps/api/app/common/: rate_limit.py
apps/api/app/dashboard/: routes.py  service.py
apps/api/app/insights/: llm.py  routes.py  rules.py  schemas.py  service.py
apps/api/app/parsers/: __init__.py  hana_bank.py  hana_card.py  samsung_card.py  simple_rules.py  woori_card.py
apps/api/app/seed/: kim_jichul.py  routes.py
apps/api/app/transactions/: routes.py  schemas.py  service.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial.py  0002_add_llm_usage_log.py  0003_add_user_category_override.py  0004_add_essential_override_and_insights.py
apps/api/seed/kim_jichul/: transactions.json
apps/api/tests/: .env.test  conftest.py  test_health.py  test_redis_client.py  test_settings.py
apps/api/tests/auth/: test_deps.py  test_jwt.py  test_login.py  test_logout.py  test_password.py  test_password_policy.py  test_refresh.py  test_seed.py  test_signup.py
apps/api/tests/categorization/: test_budget.py  test_cache.py  test_essential.py  test_llm.py  test_rulebook.py  test_service.py
apps/api/tests/common/: test_rate_limit.py
(+108 files in other folders)
